--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -26,6 +26,8 @@ faker==19.11.0; python_version >= '3.8'
 fred-epplib@ git+https://github.com/cisagov/epplib.git@d56d183f1664f34c40ca9716a3a9a345f0ef561c
 furl==2.1.3
 future==0.18.3; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
+gevent==23.9.1; python_version >= '3.8'
+greenlet==3.0.0; python_version < '3.11' and platform_python_implementation == 'CPython'
 gunicorn==21.2.0; python_version >= '3.5'
 idna==3.4; python_version >= '3.5'
 jmespath==1.0.1; python_version >= '3.7'
@@ -48,8 +50,11 @@ python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 
 python-dotenv==1.0.0; python_version >= '3.8'
 requests==2.31.0; python_version >= '3.7'
 s3transfer==0.7.0; python_version >= '3.7'
+setuptools==68.2.2; python_version >= '3.8'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sqlparse==0.4.4; python_version >= '3.5'
 typing-extensions==4.8.0; python_version >= '3.8'
 urllib3==2.0.7; python_version >= '3.7'
 whitenoise==6.6.0; python_version >= '3.8'
+zope.event==5.0; python_version >= '3.7'
+zope.interface==6.1; python_version >= '3.7'
