--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -27,7 +27,7 @@ fred-epplib@ git+https://github.com/cisagov/epplib.git@d56d183f1664f34c40ca9716a
 furl==2.1.3
 future==0.18.3; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 gevent==23.9.1; python_version >= '3.8'
-greenlet==3.0.0;
+greenlet==3.0.0; platform_python_implementation == 'CPython'
 gunicorn==21.2.0; python_version >= '3.5'
 idna==3.4; python_version >= '3.5'
 jmespath==1.0.1; python_version >= '3.7'
