--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,8 +1,8 @@
 -i https://pypi.python.org/simple
 annotated-types==0.6.0; python_version >= '3.8'
 asgiref==3.7.2; python_version >= '3.7'
-boto3==1.28.63; python_version >= '3.7'
-botocore==1.31.63; python_version >= '3.7'
+boto3==1.28.66; python_version >= '3.7'
+botocore==1.31.66; python_version >= '3.7'
 cachetools==5.3.1; python_version >= '3.7'
 certifi==2023.7.22; python_version >= '3.6'
 cfenv==0.5.3
@@ -22,13 +22,13 @@ django-login-required-middleware==0.9.0
 django-phonenumber-field[phonenumberslite]==7.2.0; python_version >= '3.8'
 django-widget-tweaks==1.5.0; python_version >= '3.8'
 environs[django]==9.5.0; python_version >= '3.6'
-faker==19.10.0; python_version >= '3.8'
+faker==19.11.0; python_version >= '3.8'
 fred-epplib@ git+https://github.com/cisagov/epplib.git@d56d183f1664f34c40ca9716a3a9a345f0ef561c
 furl==2.1.3
 future==0.18.3; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 gevent==23.9.1; python_version >= '3.8'
-geventconnpool@ git+https://github.com/rasky/geventconnpool.git@1bbb93a714a331a069adf27265fe582d9ba7ecd4
-greenlet==3.0.0; python_version < '3.11' and platform_python_implementation == 'CPython'
+geventconnpool@ git+https://github.com/rasky/geventconnpool.git
+greenlet==3.0.0; python_version >= '3.7'
 gunicorn==21.2.0; python_version >= '3.5'
 idna==3.4; python_version >= '3.5'
 jmespath==1.0.1; python_version >= '3.7'
@@ -39,7 +39,7 @@ marshmallow==3.20.1; python_version >= '3.8'
 oic==1.6.1; python_version ~= '3.7'
 orderedmultidict==1.0.1
 packaging==23.2; python_version >= '3.7'
-phonenumberslite==8.13.22
+phonenumberslite==8.13.23
 psycopg2-binary==2.9.9; python_version >= '3.7'
 pycparser==2.21
 pycryptodomex==3.19.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
@@ -55,7 +55,7 @@ setuptools==68.2.2; python_version >= '3.8'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sqlparse==0.4.4; python_version >= '3.5'
 typing-extensions==4.8.0; python_version >= '3.8'
-urllib3==2.0.6; python_version >= '3.7'
+urllib3==2.0.7; python_version >= '3.7'
 whitenoise==6.6.0; python_version >= '3.8'
 zope.event==5.0; python_version >= '3.7'
 zope.interface==6.1; python_version >= '3.7'
