--- a/.gitignore
+++ b/.gitignore
@@ -171,8 +171,6 @@ node_modules
 
 # Compliance/trestle related
 docs/compliance/.trestle/cache
-src/migrationdata/20231009.domaintypes.adhoc.dotgov.txt
-src/migrationdata/20231009.domainadditionaldatalink.adhoc.dotgov.txt
-src/migrationdata/20231009.agency.adhoc.dotgov.txt
-src/migrationdata/20231009.organization.adhoc.dotgov.txt
-src/migrationdata/20231009.organization.adhoc.dotgov.txt
+
+src/migrationdata/*
+
