--- a/src/Pipfile
+++ b/src/Pipfile
@@ -6,6 +6,7 @@ name = "pypi"
 [packages]
 django = "*"
 cfenv = "*"
+django-cors-headers = "*"
 pycryptodomex = "*"
 django-allow-cidr = "*"
 django-auditlog = "*"
