--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,8 +1,8 @@
 -i https://pypi.python.org/simple
 annotated-types==0.6.0; python_version >= '3.8'
 asgiref==3.7.2; python_version >= '3.7'
-boto3==1.28.76; python_version >= '3.7'
-botocore==1.31.76; python_version >= '3.7'
+boto3==1.28.79; python_version >= '3.7'
+botocore==1.31.79; python_version >= '3.7'
 cachetools==5.3.2; python_version >= '3.7'
 certifi==2023.7.22; python_version >= '3.6'
 cfenv==0.5.3
@@ -28,7 +28,7 @@ fred-epplib@ git+https://github.com/cisagov/epplib.git@d56d183f1664f34c40ca9716a
 furl==2.1.3
 future==0.18.3; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 gevent==23.9.1; python_version >= '3.8'
-geventconnpool@ git+https://github.com/rasky/geventconnpool.git
+geventconnpool@ git+https://github.com/rasky/geventconnpool.git@1bbb93a714a331a069adf27265fe582d9ba7ecd4
 greenlet==3.0.1; python_version >= '3.7'
 gunicorn==21.2.0; python_version >= '3.5'
 idna==3.4; python_version >= '3.5'
