--- a/.github/workflows/deploy-sandbox.yaml
+++ b/.github/workflows/deploy-sandbox.yaml
@@ -20,6 +20,7 @@ jobs:
         || startsWith(github.head_ref, 'nl/')
         || startsWith(github.head_ref, 'dk/')
         || startsWith(github.head_ref, 'es/')
+        || startsWith(github.head_ref, 'ky/')
     outputs:
       environment: ${{ steps.var.outputs.environment}}
     runs-on: "ubuntu-latest"
