--- a/.github/workflows/migrate.yaml
+++ b/.github/workflows/migrate.yaml
@@ -15,6 +15,7 @@ on:
         options:
           - stable
           - staging
+          - development
           - ky
           - es
           - nl
