--- a/.github/workflows/reset-db.yaml
+++ b/.github/workflows/reset-db.yaml
@@ -14,8 +14,8 @@ on:
         type: choice
         description: Which environment should we flush and re-load data for?
         options:
-          - stable
           - staging
+          - development
           - ky
           - es
           - nl
