--- a/.github/workflows/deploy-staging.yaml
+++ b/.github/workflows/deploy-staging.yaml
@@ -9,7 +9,7 @@ on:
       - 'docs/**'
       - '**.md'
       - '.gitignore'
-      
+
     tags:
       - staging-*
 
@@ -30,12 +30,11 @@ jobs:
         working-directory: ./src
         run: docker compose run app python manage.py collectstatic --no-input
       - name: Deploy to cloud.gov sandbox
-        uses: 18f/cg-deploy-action@main
+        uses: cloud-gov/cg-cli-tools@main
         env:
-          DEPLOY_NOW: thanks
+          MANIFEST: "ops/manifests/manifest-staging.yaml"
         with:
           cf_username: ${{ secrets.CF_STAGING_USERNAME }}
           cf_password: ${{ secrets.CF_STAGING_PASSWORD }}
           cf_org: cisa-dotgov
           cf_space: staging
-          push_arguments: "-f ops/manifests/manifest-staging.yaml"
