--- a/.github/workflows/migrate.yaml
+++ b/.github/workflows/migrate.yaml
@@ -35,10 +35,10 @@ jobs:
       CF_PASSWORD: CF_${{ github.event.inputs.environment }}_PASSWORD
     steps:
       - name: Run Django migrations for ${{ github.event.inputs.environment }}
-        uses: 18f/cg-deploy-action@main
+        uses: cloud-gov/cg-deploy-action@main
         with:
           cf_username: ${{ secrets[env.CF_USERNAME] }}
           cf_password: ${{ secrets[env.CF_PASSWORD] }}
           cf_org: cisa-dotgov
           cf_space: ${{ github.event.inputs.environment }}
-          full_command: "cf run-task getgov-${{ github.event.inputs.environment }} --command 'python manage.py migrate' --name migrate"
+          cf_command: "run-task getgov-${{ github.event.inputs.environment }} --command 'python manage.py migrate' --name migrate"
