--- a/.github/workflows/deploy-sandbox.yaml
+++ b/.github/workflows/deploy-sandbox.yaml
@@ -50,7 +50,7 @@ jobs:
           ENVIRONMENT: ${{ needs.variables.outputs.environment }}
           CF_USERNAME: CF_${{ needs.variables.outputs.environment }}_USERNAME
           CF_PASSWORD: CF_${{ needs.variables.outputs.environment }}_PASSWORD
-          MANIFEST: "ops/manifests/manifest-${{ needs.variables.outputs.environment }}.yaml"
+          MANIFEST: ops/manifests/manifest-${{ needs.variables.outputs.environment }}.yaml
         with:
           cf_username: ${{ secrets[env.CF_USERNAME] }}
           cf_password: ${{ secrets[env.CF_PASSWORD] }}
