--- a/.github/workflows/deploy-sandbox.yaml
+++ b/.github/workflows/deploy-sandbox.yaml
@@ -50,12 +50,12 @@ jobs:
           ENVIRONMENT: ${{ needs.variables.outputs.environment }}
           CF_USERNAME: CF_${{ needs.variables.outputs.environment }}_USERNAME
           CF_PASSWORD: CF_${{ needs.variables.outputs.environment }}_PASSWORD
-          MANIFEST: ops/manifests/manifest-${{ needs.variables.outputs.environment }}.yaml
         with:
           cf_username: ${{ secrets[env.CF_USERNAME] }}
           cf_password: ${{ secrets[env.CF_PASSWORD] }}
           cf_org: cisa-dotgov
           cf_space: ${{ env.ENVIRONMENT }}
+          cf_manifest: ops/manifests/manifest-${{ env.environment }}.yaml
   comment:
     runs-on: ubuntu-latest
     needs: [variables, deploy]
