--- a/.github/workflows/deploy-staging.yaml
+++ b/.github/workflows/deploy-staging.yaml
@@ -31,10 +31,9 @@ jobs:
         run: docker compose run app python manage.py collectstatic --no-input
       - name: Deploy to cloud.gov sandbox
         uses: cloud-gov/cg-cli-tools@main
-        env:
-          MANIFEST: "ops/manifests/manifest-staging.yaml"
         with:
           cf_username: ${{ secrets.CF_STAGING_USERNAME }}
           cf_password: ${{ secrets.CF_STAGING_PASSWORD }}
           cf_org: cisa-dotgov
           cf_space: staging
+          cf_manifest: "ops/manifests/manifest-staging.yaml"
