--- a/.github/workflows/deploy-sandbox.yaml
+++ b/.github/workflows/deploy-sandbox.yaml
@@ -55,7 +55,7 @@ jobs:
           cf_password: ${{ secrets[env.CF_PASSWORD] }}
           cf_org: cisa-dotgov
           cf_space: ${{ env.ENVIRONMENT }}
-          cf_manifest: ops/manifests/manifest-${{ env.environment }}.yaml
+          cf_manifest: ops/manifests/manifest-${{ env.ENVIRONMENT }}.yaml
   comment:
     runs-on: ubuntu-latest
     needs: [variables, deploy]
