--- a/.github/workflows/daily-csv-upload.yaml
+++ b/.github/workflows/daily-csv-upload.yaml
@@ -47,11 +47,16 @@ jobs:
 
       - name: Generate current-federal.csv
         uses: 18f/cg-deploy-action@main
+        env:
+          DEPLOY_NOW: thanks
+          ENVIRONMENT: ${{ needs.variables.outputs.environment }}
+          CF_USERNAME: CF_${{ needs.variables.outputs.environment }}_USERNAME
+          CF_PASSWORD: CF_${{ needs.variables.outputs.environment }}_PASSWORD
         with:
           cf_username: ${{ secrets[env.CF_USERNAME] }}
           cf_password: ${{ secrets[env.CF_PASSWORD] }}
           cf_org: cisa-dotgov
-          cf_space: ${{ github.event.inputs.environment }}
+          cf_space: ${{ env.ENVIRONMENT }}
           full_command: cf run-task getgov-${{ env.ENVIRONMENT }} "/tmp/lifecycle/shell -c './manage.py generate_current_full_report.py'"
         
       - name: Generate current-full.csv
