--- a/.github/workflows/daily-csv-upload.yaml
+++ b/.github/workflows/daily-csv-upload.yaml
@@ -66,7 +66,7 @@ jobs:
   
   comment:
     runs-on: ubuntu-latest
-    needs: [variables, deploy]
+    needs: [variables, upload_reports]
     steps:
       - uses: actions/github-script@v6
         env:
