--- a/.github/workflows/daily-csv-upload.yaml
+++ b/.github/workflows/daily-csv-upload.yaml
@@ -49,7 +49,7 @@ jobs:
 
   upload_reports:
     runs-on: ubuntu-latest
-    needs: [variables]
+    needs: [variables, wait_for_deploy]
     steps:
       - uses: actions/checkout@v3
 
@@ -57,6 +57,19 @@ jobs:
         run: |
           curl -L "https://packages.cloudfoundry.org/stable?release=linux64-binary&source=github" | tar -zx
           sudo mv cf /usr/local/bin
+
+      - name: Set login credentials
+        uses: 18f/cg-deploy-action@main
+        env:
+          DEPLOY_NOW: thanks
+          ENVIRONMENT: ${{ needs.variables.outputs.environment }}
+          CF_USERNAME: CF_${{ needs.variables.outputs.environment }}_USERNAME
+          CF_PASSWORD: CF_${{ needs.variables.outputs.environment }}_PASSWORD
+        with:
+          cf_username: ${{ secrets[env.CF_USERNAME] }}
+          cf_password: ${{ secrets[env.CF_PASSWORD] }}
+          cf_org: cisa-dotgov
+          cf_space: ${{ env.ENVIRONMENT }}
 
       - name: Generate current-federal.csv
         run: cf run-task getgov-${{ env.ENVIRONMENT }} "/tmp/lifecycle/shell -c './manage.py generate_current_full_report.py'"
