--- a/.github/workflows/daily-csv-upload.yaml
+++ b/.github/workflows/daily-csv-upload.yaml
@@ -60,16 +60,14 @@ jobs:
           sudo mv cf /usr/local/bin
 
       - name: Set login credentials
-        uses: 18f/cg-deploy-action@main
+        run: |
+          cf api https://api.fr.cloud.gov
+          cf auth ${{ secrets[env.CF_USERNAME] }} ${{ secrets[env.CF_PASSWORD] }}
+          cf target -o cisa-dotgov -s ${{ env.ENVIRONMENT }}
         env:
           ENVIRONMENT: ${{ needs.variables.outputs.environment }}
           CF_USERNAME: CF_${{ needs.variables.outputs.environment }}_USERNAME
           CF_PASSWORD: CF_${{ needs.variables.outputs.environment }}_PASSWORD
-        with:
-          cf_username: ${{ secrets[env.CF_USERNAME] }}
-          cf_password: ${{ secrets[env.CF_PASSWORD] }}
-          cf_org: cisa-dotgov
-          cf_space: ${{ env.ENVIRONMENT }}
 
       - name: Generate current-federal.csv
         run: cf run-task getgov-${{ env.ENVIRONMENT }} "/tmp/lifecycle/shell -c './manage.py generate_current_full_report.py'"
