--- a/.github/workflows/daily-csv-upload.yaml
+++ b/.github/workflows/daily-csv-upload.yaml
@@ -4,7 +4,7 @@ run-name: Upload current-full.csv and current-federal.csv for branch ${{ github.
 on:
   schedule:
     # Runs every day at 5 AM UTC
-    cron: '0 5 * * *'
+    - cron: '0 5 * * *'
 
 jobs:
   variables: 
